--- a/accessibility-inspector/manifest.json
+++ b/accessibility-inspector/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Accessibility Checker",
+  "name": "Accessibility Inspector",
   "version": "1.0",
-  "description": "This extantion allows you to check the accessibility of websites",
+  "description": "This extention allows you to check the accessibility of websites",
   "permissions": [
     "activeTab",
     "storage",
@@ -17,7 +17,7 @@
   },
   "action": {
     "default_popup": "popup/popup.html",
-    "default_title": "Проверить доступность"
+    "default_title": "Проверка доступности сайтов"
   },
   "content_scripts": [
     {
