--- a/accessibility-inspector/manifest.json
+++ b/accessibility-inspector/manifest.json
@@ -6,7 +6,8 @@
   "permissions": [
     "activeTab",
     "storage",
-    "scripting"
+    "scripting",
+    "storage"
   ],
   "host_permissions": [
     "http://*/*",
